# Discord-Chatbot

./: README.md
Bombaka_Jo_BOT/: main.py  pyproject.toml
